PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2017 PHP 7.0.22



06 Jul 2017 PHP 7.0.21

- Core:
  . Fixed bug #74738 (Multiple [PATH=] and [HOST=] sections not properly
    parsed). (Manuel Mausz)
  . Fixed bug #74658 (Undefined constants in array properties result in broken
    properties). (Laruence)
  . Fixed misparsing of abstract unix domain socket names. (Sara)

- DOM:
  . Fixed bug #69373 (References to deleted XPath query results). (ttoohey)

- Intl:
  . Fixed bug #73473 (Stack Buffer Overflow in msgfmt_parse_message). (libnex)
  . Fixed bug #74705 (Wrong reflection on Collator::getSortKey and
    collator_get_sort_key). (Tyson Andre, Remi)

- Mbstring:
  . Add oniguruma upstream fix (CVE-2017-9224, CVE-2017-9226, CVE-2017-9227,
    CVE-2017-9228, CVE-2017-9229) (Remi, Mamoru TASAKA)

- OCI8:
  . Add TAF callback (PR #2459). (KoenigsKind)
  . Fixed bug #74625 (Integer overflow in oci_bind_array_by_name). (Ingmar Runge)

- Opcache:
  . Fixed bug #74663 (Segfault with opcache.memory_protect and
    validate_timestamp). (Laruence)

- PDO_OCI:
  . Support Instant Client 12.2 in --with-pdo-oci configure option.
    (Tianfang Yang)

- Reflection:
  . Fixed bug #74673 (Segfault when cast Reflection object to string with
    undefined constant). (Laruence)

- SPL:
  . Fixed bug #74478 (null coalescing operator failing with SplFixedArray).
    (jhdxr)

- Standard:
  . Fixed bug #74708 (Invalid Reflection signatures for random_bytes and
    random_int). (Tyson Andre, Remi)

- FTP:
  . Fixed bug #74598 (ftp:// wrapper ignores context arg). (Sara)

- PHAR:
  . Fixed bug #74386 (Phar::__construct reflection incorrect). (villfa)

- SOAP
  . Fixed bug #74679 (Incorrect conversion array with WSDL_CACHE_MEMORY).
    (Dmitry)

- Streams:
  . Fixed bug #74556 (stream_socket_get_name() returns '\0'). (Sara)

8 Jun 2017 PHP 7.0.20

- Core: